kubernetes/microservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
  namespace: development
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: microservice
